--- a/Spa2/nbproject/private/private.properties
+++ b/Spa2/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/Users/alex/Library/Application Support/NetBeans/8.1rc/build.properties
+user.properties.file=C:\\Users\\sarbu_192\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
